[tool.poetry]
name = "todoutil"
version = "0.1.0"
description = ""
authors = ["Thomas Quinot <thomas.quinot@alan.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
todoist-api-python = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todoutil = "todoutil:main"
