[project]
name = "todoutil"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Quinot", email = "thomas.quinot@alan.eu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "todoist-api-python>=3.2.1",
]

[project.scripts]
todoutil = "todoutil:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
